# biotech-openenv

./: .env  .openenvignore  Dockerfile  README.md  client.py  debug_validation.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  test_full_pipeline.py  test_graders.py
scripts/: validate-submission.sh
server/: app.py
src/envs/biotech_env/server/: app.py  environment.py
